--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "socket-server": "node server/index.js"
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
@@ -30,13 +31,14 @@
     "gsap": "^3.12.5",
     "lenis": "^1.1.6",
     "lucide-react": "^0.416.0",
-    "next": "14.2.3",
+    "next": "^14.2.33",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "resend": "^4.0.0",
     "sass": "^1.77.8",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
